[tool.poetry]
name = "gbk_switcheroo"
version = "0.1.0"
description = ""
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
readme = "README.md"

[project.scripts]
"gbk_switcheroo" = "gbk_switcheroo.main:main"

[project]
name = "gbk_switcheroo"
description = ""
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
result = "^0.14.0"
ruff = "^0.1.6"
pdoc = "^14.1.0"
blackdoc = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
