[tool.poetry]
name = "gbk_switcheroo"
version = "0.1.0"
description = ""
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
readme = "README.md"

[tool.poetry.scripts]
"gbk_switcheroo" = "gbk_switcheroo.main:main"

[tool.poetry.dependencies]
python = "^3.9"
result = "^0.14.0"
ruff = "^0.1.6"
pdoc = "^14.1.0"
blackdoc = "^0.3.9"
polars = "^0.19.15"
strictyaml = "^1.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
